# EngageAI

./: -- SQLite.sql  .coverage  README.md  add_credentials_to_fetches.py  add_exception_handler.py  dump.rdb  ensure_remove_middleware.py  frontend-structure.txt  modify_render_yaml.py  modify_session_middleware.py  package-lock.json  package.json  pyproject.toml  refactor_frontend_fetches.py  remove_middleware.py  verify_render_yaml.py
backend/: .coverage  .gitignore  alembic.ini  build.sh  dump.rdb  engageai.db  main.py  pytest.ini  render.yaml  requirements.txt  run_migrations.py  seed.py  test_celery_eta.py  test_db.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_add_business_phone_number.py  0f37aa60ba2b_create_ai_nudges_table.py  21e7c88e7ecd_add_review_platform_url_to_business_.py  2a54796cbf2e_add_last_read_at_to_customers_table.py  412246714b94_add_targeted_event_table_and_update_.py  658b9447be77_add_index_to_customer_business_id.py  784712d8523d_add_pending_approval_and_rejected_.py  83ece8adc8df_add_targeted_event_model_and_enum_.py  (+5 more)
backend/app/: __init__.py  auth.py  celery_app.py  celery_tasks.py  config.py  database.py  models.py  redis_client.py  schemas.py  timezone_utils.py  utils.py
backend/tests/: conftest.py  test_ai_routes.py  test_backend.py  test_business_routes.py  test_consent_routes.py  test_customer_routes.py  test_message_routes.py  test_review_routes.py  test_stats.py  test_twilio_webhook.py
frontend/: jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
(+170 files in other folders)
